--- a/src/style.css
+++ b/src/style.css
@@ -8,10 +8,87 @@ body {
 }
 
 .weather-forecast {
-  background: #ff6f3c;
+  background: orange;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+
+header {
+  border-bottom: 1px solid white;
+  padding: 30px;
+}
+
+.search-form-input {
+  background-color: white;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-form-button {
+  background: blueviolet;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: black;
+}
+
+main {
+  padding: 30px 0;
+}
+
+.weather-forecast-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-forecast-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-forecast-details {
+  font-size: 16px;
+  color: rgba(39, 33, 60, 0.4);
+  line-height: 25px;
+  font-weight: 500;
+}
+
+.weather-forecast-details strong {
+  color: blueviolet;
+}
+
+.weather-forecast-icon {
+  font-size: 44px;
+}
+
+.weather-forecast-temperature-container {
+  display: flex;
+}
+
+.weather-forecast-temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.weather-forecast-unit {
+  margin-top: 9px;
+  font-size: 28px;
+}
+
+footer {
+  border-top: 1px solid white;
+  padding: 30px;
+  text-align: center;
+  font-size: 10px;
+  color: white;
 }
