Added weather icon data

--- a/src/style.css
+++ b/src/style.css
@@ -51,8 +51,9 @@ main {
 
 .weather-forecast-city {
   margin: 0;
-  font-size: 38px;
+  font-size: 35px;
   line-height: 48px;
+  text-align: left;
 }
 
 .weather-forecast-details {
@@ -60,6 +61,7 @@ main {
   color: rgba(39, 33, 60, 0.4);
   line-height: 25px;
   font-weight: 500;
+  text-align: left;
 }
 
 .weather-forecast-details strong {
@@ -67,7 +69,8 @@ main {
 }
 
 .weather-forecast-icon {
-  font-size: 44px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-forecast-temperature-container {
